# LLaMA-Factory-AutoReviewer

./: .gitignore  categorize_sections.py  categorize_sections_no_numbers.py  parse_sections.py  parse_sections_no_numbers.py  plot_comparative_attention.py  plot_section_boxplots.py  pyproject.toml  requirements.txt  setup.py  sync_from_gcs.sh  sync_to_gcs.sbatch  sync_to_gcs.sh  test_find_paper_token_range.py  visualize_text_attention.sh  visualize_vision_attention.sh
2_8_26/: experiment_implementation_1.md  experiments_implementation.md  gemini_title_infer.py  generate_title_dataset.py  infer_title_qwen.sbatch  rough_plan.md  rough_plan_2.md  rough_plan_3.md  working_plan.md  working_plan_2.md  working_plan_3.md  working_plan_4.md
ablations/: generate_ablation_datasets.py  plan.md  proper_inference.sbatch  run_inference.py  run_inference.sbatch  run_training.sbatch  specification_plan.md
configs/: data_sweep.yaml  data_sweep_clean_images.yaml  data_sweep_v2_clean.yaml  data_sweep_v2_vision.yaml  final_sweep_v7_clean.yaml  final_sweep_v7_clean_images.yaml  fsdp2_1gpu_config.yaml  fsdp2_2gpu_config.yaml  fsdp2_4gpu_config.yaml  fsdp2_8gpu_config.yaml  grid_search_base.yaml  grid_searchv2_base_batch16_ailab.yaml  grid_searchv2_base_batch16_pli.yaml  grpo_binary.yaml  hyperparam_clean_and_images_sweep_batch16.yaml  hyperparam_clean_and_images_sweep_batch32.yaml  hyperparam_sweep_batch16.yaml  hyperparam_sweep_batch32.yaml  hyperparam_vision_data_sweep.yaml  hyperparam_vision_sweep_batch16.yaml  hyperparam_vision_sweep_batch32.yaml  qwen2_5_3b_full_sft_ds3.yaml  qwen2_5_3b_full_sft_fsdp2.yaml  qwen2_5_3b_last_layer_sft_fsdp2.yaml  qwen2_5_3bvl_cache_tokenized.yaml  qwen2_5_3bvl_cache_tokenized_text+images.yaml  qwen2_5_3bvl_full_sft_ds3.yaml  qwen2_5_3bvl_full_sft_ds3_text+vision.yaml  qwen2_5_7b_full_sft_ds3.yaml  qwen2_5_7b_full_sft_fsdp2.yaml  qwen2_5_7b_iclr_sft_fsdp2.yaml  qwen2_5_7b_iclr_sft_fsdp2_v2.yaml  qwen2_5_7b_iclr_sft_reviews_fsdp2_v2.yaml  qwen2_5vl_7b_full_sft_fsdp2.yaml  qwen3_4b_balanced_deepreview.yaml  qwen3_8b_balanced_deepreview.yaml  sweep_final_clean.yaml  (+14 more)
textgrad_experiments/: optimize_prompt.py  pyproject.toml  run_optimization.sbatch  run_optimization_14b.sbatch  run_optimization_32b.sbatch  utils.py
textgrad_experiments/logs/: 2026-01-17_02-08-26.jsonl  2026-01-17_02-24-15.jsonl  2026-01-17_02-55-39.jsonl  textgrad_2473580.err  textgrad_2473580.out  textgrad_2473587.out  textgrad_2473593.err  textgrad_2473593.out  textgrad_2473594.err  textgrad_2473594.out  textgrad_2473598.err  textgrad_2473600.out  textgrad_2473601.out  textgrad_2473603.out
textgrad_experiments/results/: best_prompt_20260117_020843.txt  optimization_log_20260117_022431.jsonl  optimization_log_20260117_023256_testing.jsonl  optimization_log_20260117_024033.jsonl  optimization_log_20260117_025202.jsonl  optimization_log_20260117_025543.jsonl
(+494 files in other folders)
